crates/tepra/tests/snapshots/askama_render__job_card_canceled.snap
---
source: crates/tepra/tests/askama_render.rs
expression: html
---

<div id="job-3"
  data-printer="PT-P710BT"
  data-terminal="true"

  class="card bg-base-100 shadow p-4 m-2">
  <p class="font-bold">PT-P710BT</p>
  <p>Job #3</p>

  <p class="text-error">Canceled</p>

</div>
