crates/tepra/tests/snapshots/askama_render__job_card_in_progress.snap
---
source: crates/tepra/tests/askama_render.rs
expression: html
---

<div id="job-1"
  data-printer="PT-P710BT"
  data-terminal="false"

  hx-get="/ui/jobs/PT-P710BT/1"
  hx-trigger="every 1s"
  hx-swap="outerHTML"

  class="card bg-base-100 shadow p-4 m-2">
  <p class="font-bold">PT-P710BT</p>
  <p>Job #1</p>

  <p>Progress:

    42%

  </p>

</div>
